# CursedGL

./: .gitignore  CMakeLists.txt  README.md
examples/: colored_cube.c  first_person_demo.c  hello_cube.c  hello_lines.c  hello_textured_triangle.c  hello_triangle.c  interpolation.c  montecarlo.c  teapot.c  usage.c
include/: common.h  cursedgl.h  error.h  framebuffer.h  init.h  lights.h  mat2.h  mat3.h  mat4.h  material.h  pixel.h  quat.h  rasterizer.h  shapes.h  texture.h  transform.h  vec.h
src/: colors.c  colors.h  common.h  cursedgl.h  error.c  framebuffer.c  framebuffer.h  init.c  init.h  lights.c  lights.h  mat2.h  mat3.h  mat4.h  material.c  material.h  objLoader.c  objLoader.h  pixel.h  quat.h  rasterizer.c  rasterizer.h  shapes.c  shapes.h  texture.c  transform.c  transform.h  trex.h  vec.h
tp/: stb_image.h
